--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,7 @@
 [package]
-name = "personal-ai"
+name = "deepseek-siri"
 version = "0.1.0"
 edition = "2021"
-
-[lib]
-crate-type = ["cdylib"]
 
 [dependencies]
 axum = "0.7"
@@ -12,12 +9,4 @@ tokio = { version = "1.0", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 async-openai = "0.17"
-reqwest = { version = "0.11", features = ["json"] }
-worker = "0.0.18"
-console_error_panic_hook = "0.1.7"
-getrandom = { version = "0.2", features = ["js"] }
-
-[profile.release]
-lto = true
-strip = true
-codegen-units = 1 
+reqwest = { version = "0.11", features = ["json"] } 
